# CrumbContext

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-request.example.json  release-request.json
.github/ISSUE_TEMPLATE/: adapter.yml  benchmark.yml  bug.yml  config.yml  feature.yml
.github/workflows/: apply-fable-mythos.yml  apply-fable-support.yml  async-import-diagnostic.yml  async-streaming.yml  ci.yml  codeql.yml  complete-workload-surface.yml  debug-fable-workloads.yml  docs.yml  generate-social-preview.yml  provider-benchmark.yml  publish.yml  python-api.yml  release-agent.yml  release-contract-diagnostic.yml  repair-async-contract.yml  repair-doc-branch.yml  repair-py310-cancellation.yml  repair-release-contract.yml  run-complete-workload-surface.yml  verify-docs-public.yml  verify-pypi.yml  workloads.yml
crumbcontext/: __init__.py  anchors.py  api.py  async_api.py  benchmark.py  bundle.py  cli.py  counterfactual.py  counterfactual_evaluation.py  counterfactual_models.py  counterfactual_payloads.py  counterfactual_report.py  demo.py  evidence.py  models.py  profiles.py  render.py  report.py  router.py  schemas.py  summarize.py  workloads.py
crumbcontext/fixtures/workloads/v1/: manifest.json
crumbcontext/providers/: __init__.py  anthropic.py  async_base.py  async_registry.py  base.py  mock.py  openai.py  sse.py  streaming_adapters.py
docs/: ANTHROPIC.md  ARCHITECTURE.md  ASYNC_STREAMING.md  BRAND.md  COUNTERFACTUAL.md  GITHUB_SETUP.md  LAUNCH.md  LAUNCH_KIT.md  OPENAI.md  PROVIDER_BENCHMARKS.md  PYTHON_API.md  README.md  RELEASE.md  RELEASE_NOTES_v0.1.0.md  ROUTING_PROFILES.md  VERIFICATION.md  WORKLOADS.md
docs/site-assets/: site.css  site.js
examples/: transcript.json
examples/python/: build_anthropic_payload.py  build_openai_payload.py  route_and_inspect.py  run_async_provider.py  run_mock_provider.py  stream_mock_provider.py
scripts/: .fable_payload_1  .fable_payload_1a  .fable_payload_1b  .fable_payload_1c  .fable_payload_1d  .fable_payload_1e  .fable_payload_1f  .fable_payload_1g  .fable_payload_2  .fable_payload_3  .fable_payload_4  apply_workload_surface.py  build_docs.py  complete_surface.py  fable-cli-fix-trigger.txt  fable-mythos-trigger.txt  release-check.py  release_agent.py  release_assets.py  try.sh  workload-surface-trigger.txt
tests/: test_anthropic.py  test_async_streaming.py  test_cli_profiles.py  test_crumbcontext.py  test_docs_site.py  test_evidence.py  test_fable_mythos.py  test_openai.py  test_openai_counterfactual.py  test_profiles.py  test_public_api.py  test_redaction.py  test_release_agent.py  test_release_assets.py  test_release_contract.py  test_schemas.py  test_workloads.py  test_workloads_cli.py
